# fastgrab

./: .dockerignore  .gitignore  .travis.yml  Makefile  Pipfile  README.md  build.py  docker-compose.yml  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
docker/: Dockerfile  entrypoint.sh  start-desktop.sh  start-wayland-desktop.sh
examples/: another_vlc_recorder_example.py  benchmark.py  example_screenshot_1.py  frame_buffer_example_1.py  low_level_api_screenshot.py  screen_recorder_example_1.py  single_screenshot.py  test_linux_x11_screenshot.py  vlc_capture_example.py
fastgrab/: __init__.py  backends.py  capture.py  dataio.py  main.py  metadata.py  screenshot.py  utils.py
fastgrab/backends/: __init__.py  base.py  macos.py  portal.py  windows.py  wlr.py  x11.py
fastgrab/backends/protocols/: __init__.py
fastgrab/backends/protocols/wlr_screencopy_unstable_v1/: __init__.py  zwlr_screencopy_frame_v1.py  zwlr_screencopy_manager_v1.py
fastgrab/linux_x11/: CMakeLists.txt  screenshot.c
tests/: _run_pytest_clean_exit.py  conftest.py  test_backends.py  test_capture.py  test_dataio.py  test_integration.py  test_integration_wlr.py  test_misc.py  test_screenshot.py  test_x11_lowlevel.py  wayland_painter.py
