[tool.poetry]
name = "fastgrab"
version = "0.3.0.dev0"
description = "Low level screen capture package with a numpy interface"
authors = ["Mher Kazandjian <mherkazandjian@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/mherkazandjian/fastgrab"
repository = "https://github.com/mherkazandjian/fastgrab"
keywords = ["screenshot", "screen-capture", "x11", "numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
packages = [{include = "fastgrab"}]
include = [
    {path = "fastgrab/linux_x11/*.c", format = "sdist"},
    {path = "fastgrab/backends/protocols/*.xml", format = ["sdist", "wheel"]},
    {path = "fastgrab/backends/protocols/*.py", format = ["sdist", "wheel"]},
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pywayland = {version = "^0.4.17", optional = true}
dbus-next = {version = "^0.2.3", optional = true}
pipewire-python = {version = "^0.2.0", optional = true}

[tool.poetry.extras]
wayland = ["pywayland"]
wayland-portal = ["dbus-next", "pipewire-python"]
wayland-all = ["pywayland", "dbus-next", "pipewire-python"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
python-xlib = "*"

[build-system]
requires = ["poetry-core>=1.5.0", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: pixel-level tests that mutate X server state (need DISPLAY + xsetroot)",
    "wayland: pixel-level tests that exercise the Wayland (wlr-screencopy) backend (need WAYLAND_DISPLAY + a wlroots compositor like cage)",
]
